# SINGABOAT-VRX

./: LICENCE  LICENSE  README.md
docker/: Dockerfile  Gazebo_Docker_Config.md  README.md  RViz_Docker_Config.md
singaboat_vrx/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
singaboat_vrx/action/: Mission.action
singaboat_vrx/bags/: README.md
singaboat_vrx/cfg/: gymkhana_challenge_config.cfg  ik_solver_config.cfg  inverse_kinematics_config.cfg  mission_manager_config.cfg  pose_processor_config.cfg  scan_dock_deliver_config.cfg  scene_perception_config.cfg  semantic_navigation_config.cfg  station_keeping_config.cfg  task_manager_config.cfg  teleoperation_config.cfg  wayfinding_config.cfg
singaboat_vrx/config/: component_config.xacro  component_config.yaml  thruster_config.xacro  thruster_config.yaml
singaboat_vrx/docker/: Dockerfile  README.md  singaboat_vrx.sh
singaboat_vrx/launch/: singaboat_build_wamv.launch  singaboat_gymkhana_challenge.launch  singaboat_ik_solver.launch  singaboat_pose_processor.launch  singaboat_scan_dock_deliver.launch  singaboat_scene_perception.launch  singaboat_semantic_navigation.launch  singaboat_station_keeping.launch  singaboat_teleop_key.launch  singaboat_teleoperation.launch  singaboat_vrx.launch  singaboat_vrx_rviz.launch  singaboat_vrx_world.launch  singaboat_wayfinding.launch  vrx_gymkhana_challenge.launch  vrx_scan_dock_deliver.launch  vrx_scene_perception.launch  vrx_semantic_navigation.launch  vrx_station_keeping.launch  vrx_wayfinding.launch
singaboat_vrx/launch/playback/: playback_gymkhana_challenge.launch  playback_scan_dock_deliver.launch  playback_scene_perception.launch  playback_semantic_navigation.launch  playback_station_keeping.launch  playback_wayfinding.launch
singaboat_vrx/launch/record/: record_gymkhana_challenge.launch  record_scan_dock_deliver.launch  record_scene_perception.launch  record_semantic_navigation.launch  record_station_keeping.launch  record_wayfinding.launch
singaboat_vrx/launch/submissions/: vrx_gymkhana_challenge.launch  vrx_scan_dock_deliver.launch  vrx_scene_perception.launch  vrx_semantic_navigation.launch  vrx_station_keeping.launch  vrx_wayfinding.launch
singaboat_vrx/launch/tasks/: singaboat_gymkhana_challenge.launch  singaboat_scan_dock_deliver.launch  singaboat_scene_perception.launch  singaboat_semantic_navigation.launch  singaboat_station_keeping.launch  singaboat_wayfinding.launch
singaboat_vrx/launch/tools/: singaboat_build_wamv.launch  singaboat_inverse_kinematics.launch  singaboat_vrx_rviz.launch
singaboat_vrx/msg/: Pose3D.msg  Pose3DStamped.msg  Pose6D.msg  Pose6DStamped.msg
singaboat_vrx/rviz/: singaboat_gymkhana_challenge.rviz  singaboat_scan_dock_deliver.rviz  singaboat_scene_perception.rviz  singaboat_semantic_navigation.rviz  singaboat_station_keeping.rviz  singaboat_vrx.rviz  singaboat_wayfinding.rviz
singaboat_vrx/scripts/: entrypoint.sh  singaboat_gymkhana_challenge.sh  singaboat_ik_solver.py  singaboat_pose_processor.py  singaboat_scan_dock_deliver.sh  singaboat_scene_perception.sh  singaboat_semantic_navigation.sh  singaboat_station_keeping.py  singaboat_station_keeping.sh  singaboat_task_manager.py  singaboat_teleop_key.py  singaboat_vrx.sh  singaboat_wayfinding.py  singaboat_wayfinding.sh
singaboat_vrx/src/: singaboat_gymkhana_challenge.py  singaboat_ik_solver.py  singaboat_inverse_kinematics.py  singaboat_mission_manager.py  singaboat_pose_processor.py  singaboat_scan_dock_deliver.py  singaboat_scene_perception.py  singaboat_semantic_navigation.py  singaboat_station_keeping.py  singaboat_task_manager.py  singaboat_teleoperation.py  singaboat_wayfinding.py
singaboat_vrx/src/singaboat_vrx/: common_utilities.py  control_module.py  perception_module.py  planning_module.py  singaboat_pid_controller.py
singaboat_vrx/urdf/: README.md  singaboat.urdf
singaboat_vrx/wamv/: README.md  component_config.xacro  component_config.yaml  thruster_config.xacro
singaboat_vrx/worlds/: README.md  open_ocean.world  open_ocean.world.xacro  singaboat_vrx.world  singaboat_vrx.world.xacro  sydney_regatta.world  sydney_regatta.world.xacro  vrx_course.world  vrx_course.world.xacro
vrx/vrx_gazebo/launch/: gymkhana.launch  perception_task.launch  scan_dock_deliver.launch  wayfinding.launch  wildlife.launch
vrx/vrx_gazebo/models/crocodile_buoy/meshes/: crocodile.dae
vrx/vrx_gazebo/worlds/: stationkeeping_task.world.xacro  sydneyregatta.xacro  wildlife_task.world.xacro
vrx/vrx_gazebo/worlds/2022_phase2/: gymkhana0.world  gymkhana1.world  gymkhana2.world  gymkhana3.world  gymkhana4.world  gymkhana5.world  perception0.world  perception1.world  perception2.world  perception3.world  perception4.world  perception5.world  scan_dock_deliver0.world  scan_dock_deliver1.world  scan_dock_deliver2.world  scan_dock_deliver3.world  scan_dock_deliver4.world  scan_dock_deliver5.world  stationkeeping0.world  stationkeeping1.world  stationkeeping2.world  stationkeeping3.world  stationkeeping4.world  stationkeeping5.world  wayfinding0.world  wayfinding1.world  wayfinding2.world  wayfinding3.world  wayfinding4.world  wayfinding5.world  wildlife0.world  wildlife1.world  wildlife2.world  wildlife3.world  wildlife4.world  wildlife5.world
vrx/vrx_gazebo/worlds/2022_practice/: gymkhana0.world  gymkhana1.world  gymkhana2.world  perception0.world  perception1.world  perception2.world  scan_dock_deliver0.world  scan_dock_deliver1.world  scan_dock_deliver2.world  stationkeeping0.world  stationkeeping1.world  stationkeeping2.world  wayfinding0.world  wayfinding1.world  wayfinding2.world  wildlife0.world  wildlife1.world  wildlife2.world
vrx_gazebo/models/dock_2016/: model.sdf
vrx_gazebo/models/dock_2016_dynamic/: model.sdf
vrx_gazebo/models/dock_2018_dynamic/: model.sdf
vrx_gazebo/models/dock_2022/: model.sdf
vrx_gazebo/models/dock_2022_base/: model.sdf
vrx_gazebo/models/dock_2022_base_dynamic/: model.sdf
vrx_gazebo/models/dock_2022_dynamic/: model.sdf
vrx_gazebo/models/robotx_2018_qualifying_avoid_obstacles_buoys/: model.sdf
(+4 files in other folders)
